# pprof_samples

./: .clang-format  .clangd  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  PROFILING_GUIDE.md  pyproject.toml
common/: rdtsc.h
docs/: gperftools_pprof_guide.md
samples/01_flat_vs_cum/: bad.cpp  good.cpp  main.cpp
samples/02_inline_effect/: bad.cpp  good.cpp  main.cpp
samples/03_complexity/: main.cpp
samples/03_virtual_dispatch/: bad.cpp  good.cpp
samples/04_false_sharing/: bad.cpp  good.cpp  main.cpp
samples/05_cache_miss/: main.cpp
samples/05_list_vs_vector/: bad.cpp  good.cpp
samples/06_alloc_pressure/: main.cpp
samples/06_vector_reserve/: bad.cpp  good.cpp
samples/07_lock_contention/: bad.cpp  good.cpp  main.cpp
samples/08_branch_mispredict/: bad.cpp  good.cpp
samples/09_map_vs_unordered/: bad.cpp  good.cpp
scripts/: build_android.py  record.py  report.py
