[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pprof-samples"
version = "0.1.0"
description = "Profiling automation: simpleperf on Android, perf/ETW on Windows"
requires-python = ">=3.10"
dependencies = [
    "protobuf==4.21.*",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"
